feat: add model parameters in qsyst.ipynb tutorial

--- a/tutorials/qsyst.ipynb
+++ b/tutorials/qsyst.ipynb
@@ -113,7 +113,7 @@
    "id": "4f2cf07e",
    "metadata": {},
    "source": [
-    "Now we can create the **Qsyst** class instance with the initial parameters."
+    "Now we can create the **Qsyst** class instance with the initial parameters. The **learnable_vars** argument should be a list containing the parameters you want to learn (turn on _autograd = True_ for them). In this example, I want autograd to be enabled for **g_real** and **eA_imag**."
    ]
   },
   {
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "model = Qsyst(init_pars=init_pars, learnable_vars=[], init_print=True)"
+    "model = Qsyst(init_pars=init_pars, learnable_vars=['g_real', 'eA_imag'], init_print=True)"
    ]
   },
   {
@@ -177,18 +177,40 @@
     }
    ],
    "source": [
-    "def print_state_dict(state_dict):\n",
-    "    print('state dict:')\n",
-    "    for key, values in state_dict.items():\n",
-    "        print(f'{key}: {values}')\n",
+    "from gausstorch.utils.display import print_state_dict, print_other_pars\n",
     "\n",
-    "def print_other_pars(other_pars):\n",
-    "    print('other pars:')\n",
-    "    for key, values in other_pars.items():\n",
-    "        print(f'{key}: {values}')\n",
+    "print_state_dict(state_dict = model.state_dict())\n",
+    "print_other_pars(other_pars = model.other_pars)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f394de35",
+   "metadata": {},
+   "source": [
+    "You can check what parameters have autograd enabled with **print_model_parameters()**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2abf2211",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model parameters:\n",
+      "syst_vars.eA_imag = tensor([0., 0., 0., 0.])\n",
+      "syst_vars.g_real = tensor([314.1593, 314.1593, 314.1593, 314.1593, 314.1593, 314.1593])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gausstorch.utils.display import print_model_parameters\n",
     "\n",
-    "print_state_dict(state_dict=model.state_dict())\n",
-    "print_other_pars(other_pars = model.other_pars)\n"
+    "print_model_parameters(named_parameters = model.named_parameters())"
    ]
   },
   {
@@ -208,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cf10dc42",
    "metadata": {},
    "outputs": [
@@ -237,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "94d4a146",
    "metadata": {},
    "outputs": [
@@ -283,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "65678f85",
    "metadata": {},
    "outputs": [
