feat: update markdown description in qsyst.ipynb tutorial for parameter representation

--- a/tutorials/qsyst.ipynb
+++ b/tutorials/qsyst.ipynb
@@ -17,7 +17,25 @@
    "id": "154d9aa4",
    "metadata": {},
    "source": [
+    "## What is Qsyst\n",
+    "\n",
     "On initialization, the **Qsyst** class has one required parameter: **init_pars**. It is a **dict** containing all of the physical drive, coupling and dissipation parameters. It also contains input encoding parameters.\n",
+    "\n",
+    "## How are parameters represented?\n",
+    "\n",
+    "Each set of parameters (e.g the photon conversion couplings or the complex drive amplitudes) is represented by a **1-dimensional torch.tensor** in the **init_pars** dictionnary. \n",
+    "\n",
+    "Let's say we have $M$ modes. The complex drive amplitudes are represented by two different sets of **key: value**, to represent the real and imaginary part. Each value is an $M$-values 1d torch.tensor. The ordering is straightfoward:\n",
+    "$$\n",
+    "\\epsilon = \\text{torch.tensor}(\\epsilon_0, \\dots, \\epsilon_{M-1})\n",
+    "$$\n",
+    "\n",
+    "For coupling rates, the real and imaginary parts are each represented by a $\\frac{M(M-1)}{2}$-values 1d torch.tensor. The ordering is the following:\n",
+    "$$\n",
+    "g = \\text{torch.tensor}(g_{0, 1}, g_{0, 2}, \\cdots, g_{0, M-1}, g_{1, 2}, \\cdots, g_{1, M-1}, g_{2, 3}, \\cdots, g_{M-2, M-1})\n",
+    "$$\n",
+    "\n",
+    "## Encoding of an input\n",
     "\n",
     "Here is how encoding of an input works. First, we choose an encoding parameter $\\theta_{\\text{enc}}$: either the drive **eA**, the photon conversion **g**, or the two-mode squeezing rates **gs**. Let $\\mathbf{x}$ be an input vector *of the same dimension $d$ as the encoding parameter $\\theta_{\\text{enc}}$*.\n",
     "\n",
@@ -34,12 +52,14 @@
     "$$\n",
     "where $\\theta_0, \\theta_{\\text{bias}}$ are the same as in amplitude encoding, and $\\phi_0, \\phi_{\\text{bias}} \\in \\mathbb{R}^d$. To avoid redundancy in encoding values, the user should at least set $\\phi_0 + \\phi_{\\text{bias}} < \\pi$.\n",
     "\n",
-    "Here is an example of an **init_pars** below, with explication of each parameter. We note that every unit is S.I (so seconds for time, $\\text{Hz}$ for frequency etc.), and the unit of drive amplitudes is $\\sqrt{\\text{Hz}}$."
+    "## Init_pars example\n",
+    "\n",
+    "Here is an example of an **init_pars** below, with an explication for each parameter. We note that every unit is S.I (so seconds for time, $\\text{Hz}$ for frequency etc.), and the unit of drive amplitudes is $\\sqrt{\\text{Hz}}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e4067873",
    "metadata": {},
    "outputs": [],
@@ -68,7 +88,7 @@
     "    'phi_bias': torch.zeros(1),\n",
     "    # detuning of the drives with respect to the mode resonance frequency.\n",
     "    'detuning': torch.zeros(M),\n",
-    "    # Real and imaginrary values of the drives\n",
+    "    # Real and imaginrary values of the drives. In my thesis, this is the $\\epsilon$\n",
     "    'eA_real': eA.real * torch.ones(M),\n",
     "    'eA_imag': eA.imag * torch.ones(M),\n",
     "    # Real and imaginary values of the photon conversion rates\n",
