feat: add thesis section about Gaussian simulation

--- a/tutorials/qsyst.ipynb
+++ b/tutorials/qsyst.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "The **Qsyst** class is used to model an arbitrary number of bosonic modes. Before going through this tutorial, please read the [README.md](../README.md) file to learn how to install the required packages and set up a virtual environment. There is also a section on the structure of the **gausstorch** package.\n",
     "\n",
-    "To understand how gaussian states are simulated, read **section 5.3** of my thesis manuscript."
+    "To understand how gaussian states are simulated, read **section 5.3** of my thesis manuscript. I put the relevant sections [here](<../thesis section5-3 + Hamiltonian + Langevin.pdf>) in the Git repository."
    ]
   },
   {
