feat: add unit tests, update README.md

--- a/tutorials/qsyst.ipynb
+++ b/tutorials/qsyst.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Tutorial on Qsyst class\n",
     "\n",
-    "The **Qsyst** class is used to model an arbitrary number of bosonic modes. Before going through this tutorial, please read the [README.md](../README.md) file to learn how to install the required packages and set up a virtual environment. There is also a section on the structure of the **gausstorch** package.\n",
+    "The `Qsyst` class is used to model an arbitrary number of bosonic modes. Before going through this tutorial, please read the [README.md](../README.md) file to learn how to install the required packages and set up a virtual environment. There is also a section on the structure of the `gausstorch` package.\n",
     "\n",
     "To understand how gaussian states are simulated, read **section 5.3** of my thesis manuscript. I put the relevant sections [here](<../thesis section5-3 + Hamiltonian + Langevin.pdf>) in the Git repository."
    ]
@@ -19,11 +19,11 @@
    "source": [
     "## What is Qsyst\n",
     "\n",
-    "On initialization, the **Qsyst** class has one required parameter: **init_pars**. It is a **dict** containing all of the physical drive, coupling and dissipation parameters. It also contains input encoding parameters.\n",
+    "On initialization, the `Qsyst` class has one required parameter: `init_pars`. It is a `dict` containing all of the physical drive, coupling and dissipation parameters. It also contains input encoding parameters.\n",
     "\n",
     "## How are parameters represented?\n",
     "\n",
-    "Each set of parameters (e.g the photon conversion couplings or the complex drive amplitudes) is represented by a **1-dimensional torch.tensor** in the **init_pars** dictionnary. \n",
+    "Each set of parameters (e.g the photon conversion couplings or the complex drive amplitudes) is represented by a **1-dimensional torch.tensor** in the `init_pars` dictionnary. \n",
     "\n",
     "Let's say we have $M$ modes. The complex drive amplitudes are represented by two different sets of **key: value**, to represent the real and imaginary part. Each value is an $M$-values 1d torch.tensor. The ordering is straightfoward:\n",
     "$$\n",
@@ -37,13 +37,13 @@
     "\n",
     "## Encoding of an input\n",
     "\n",
-    "Here is how encoding of an input works. First, we choose an encoding parameter $\\theta_{\\text{enc}}$: either the drive **eA**, the photon conversion **g**, or the two-mode squeezing rates **gs**. Let $\\mathbf{x}$ be an input vector *of the same dimension $d$ as the encoding parameter $\\theta_{\\text{enc}}$*.\n",
+    "Here is how encoding of an input works. First, we choose an encoding parameter $\\theta_{\\text{enc}}$: either the drive `eA`, the photon conversion `g`, or the two-mode squeezing rates `gs`. Let $\\mathbf{x}$ be an input vector *of the same dimension $d$ as the encoding parameter $\\theta_{\\text{enc}}$*.\n",
     "\n",
-    "- To encode an input $\\mathbf{x}$ into the *amplitude* of the encoding parameter $\\theta_{\\text{enc}}$ (**theta** variable in the code), we use the relation\n",
+    "- To encode an input $\\mathbf{x}$ into the *amplitude* of the encoding parameter $\\theta_{\\text{enc}}$ (`theta` variable in the code), we use the relation\n",
     "$$\n",
     "\\theta_{\\text{enc}}(\\mathbf{x}) = \\theta_0 \\odot \\mathbf{x} + \\theta_{\\text{bias}},\n",
     "$$\n",
-    "where $\\theta_0, \\theta_{\\text{bias}} \\in \\mathbb{C}^d$, and $\\odot$ is the element-wise vector product. In the **init_pars** dictionnary, the real and imaginary values of $\\theta_{\\text{bias}}$ are specified, while **$\\theta_0$ takes the default value of the encoding parameter**.\n",
+    "where $\\theta_0, \\theta_{\\text{bias}} \\in \\mathbb{C}^d$, and $\\odot$ is the element-wise vector product. In the `init_pars` dictionnary, the real and imaginary values of $\\theta_{\\text{bias}}$ are specified, while **$\\theta_0$ takes the default value of the encoding parameter**.\n",
     "\n",
     "- To encode an input $\\mathbf{x}$ into the *phase* of the encoding parameter $\\theta_{\\text{enc}}$, we instead use the relation\n",
     "$$\n",
@@ -54,12 +54,12 @@
     "\n",
     "## Init_pars example\n",
     "\n",
-    "Here is an example of an **init_pars** below, with an explication for each parameter. We note that every unit is S.I (so seconds for time, $\\text{Hz}$ for frequency etc.), and the unit of drive amplitudes is $\\sqrt{\\text{Hz}}$."
+    "Here is an example of an `init_pars` below, with an explication for each parameter. We note that every unit is S.I (so seconds for time, $\\text{Hz}$ for frequency etc.), and the unit of drive amplitudes is $\\sqrt{\\text{Hz}}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e4067873",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "d9e6cb80",
    "metadata": {},
    "outputs": [],
@@ -133,12 +133,12 @@
    "id": "4f2cf07e",
    "metadata": {},
    "source": [
-    "Now we can create the **Qsyst** class instance with the initial parameters. The **learnable_vars** argument should be a list containing the parameters you want to learn (turn on _autograd = True_ for them). In this example, I want autograd to be enabled for **g_real** and **eA_imag**."
+    "Now we can create the `Qsyst` class instance with the initial parameters. The `learnable_vars` argument should be a list containing the parameters you want to learn (turn on _autograd = True_ for them). In this example, I want autograd to be enabled for `g_real` and `eA_imag`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "89ce10ee",
    "metadata": {},
    "outputs": [
@@ -159,15 +159,15 @@
    "id": "870d197b",
    "metadata": {},
    "source": [
-    "On instantiation (call to Qsyst._ready method), the model creates multiple attributes, of which **Qsyst.syst_vars** and **Qsyst.other_pars**.\n",
+    "On instantiation (call to `Qsyst._ready()` method), the model creates multiple attributes, of which `Qsyst.syst_vars` and `Qsyst.other_pars`.\n",
     "\n",
-    "- **Qsyst.syst_vars** is a torch.nn.ParameterDict containing the variables which can be learned.\n",
-    "- **Qsyst.other_pars** is a dict containing other useful parameters, such as the default time interval for dynamical evolution.\n"
+    "- `Qsyst.syst_vars` is a `torch.nn.ParameterDict` containing the variables which can be learned.\n",
+    "- `Qsyst.other_pars` is a `dict` containing other useful parameters, such as the default time interval for dynamical evolution.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "9c1e32d0",
    "metadata": {},
    "outputs": [
@@ -208,12 +208,12 @@
    "id": "f394de35",
    "metadata": {},
    "source": [
-    "You can check what parameters have autograd enabled with **print_model_parameters()**:"
+    "You can check what parameters have autograd enabled with `print_model_parameters()`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "2abf2211",
    "metadata": {},
    "outputs": [
@@ -238,19 +238,19 @@
    "id": "bba06378",
    "metadata": {},
    "source": [
-    "The **Qsyst** class possesses N key methods in order to simulate Gaussian states:\n",
-    "- **Qsyst.alpha_sigma_evolution( t, alpha_i, sigma_i, theta_key, theta_encoded)**  computes the field operator $\\hat{a}_i$ moments at time **t**, starting in state **alpha_i, sigma_i**. The encoding parameter is designated by its key **theta_key**, and **theta_encoded** is the value of the encoded parameter. This method calls:\n",
-    "    - **Qsyst.alpha_sigma_evolution_part_1(theta_key, theta_encoded)** which diagonalizes the propagator matrix generator (see section 5.3 of my thesis) $F' = L-\\frac{K}{2}$.\n",
-    "    - **Qsyst.alpha_sigma_evolution_part_2(theta_key, theta_encoded)** computes the field operator moments using the previously mentionned eigendecomposition\n",
-    "- **Qsyst.prob_gbs** computes global Fock state probabilities (e.g probability of having 1 photon in the first mode, 3 in the second and 4 in the third in a 3-mode system, noted $P(1_0, 3_1, 4_2)$).\n",
-    "- **Qsyst.prob_gbs_partial_trace** computes partial Fock state probabilities (e.g probability of having 1 photon in the first mode, and 2 in the third in a 3-mode system, noted $P(1_0, 2_2)$).\n",
+    "The `Qsyst` class possesses N key methods in order to simulate Gaussian states:\n",
+    "- `Qsyst.alpha_sigma_evolution( t, alpha_i, sigma_i, theta_key, theta_encoded)`  computes the field operator $\\hat{a}_i$ moments at time `t`, starting in state `alpha_i, sigma_i`. The encoding parameter is designated by its key `theta_key`, and `theta_encoded` is the value of the encoded parameter. This method calls:\n",
+    "    - `Qsyst.alpha_sigma_evolution_part_1(theta_key, theta_encoded)` which diagonalizes the propagator matrix generator (see section 5.3 of my thesis) $F' = L-\\frac{K}{2}$.\n",
+    "    - `Qsyst.alpha_sigma_evolution_part_2(theta_key, theta_encoded)` computes the field operator moments using the previously mentionned eigendecomposition\n",
+    "- `Qsyst.prob_gbs()` computes global Fock state probabilities (e.g probability of having 1 photon in the first mode, 3 in the second and 4 in the third in a 3-mode system, noted $P(1_0, 3_1, 4_2)$).\n",
+    "- `Qsyst.prob_gbs_partial_trace()` computes partial Fock state probabilities (e.g probability of having 1 photon in the first mode, and 2 in the third in a 3-mode system, noted $P(1_0, 2_2)$).\n",
     "\n",
-    "Using these methods, the **Qsyst.evolution_N()** method simulates the evolution of the mean photon number as a function of time:"
+    "Using these methods, the `Qsyst.evolution_N()` method simulates the evolution of the mean photon number as a function of time:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "cf10dc42",
    "metadata": {},
    "outputs": [
@@ -274,12 +274,12 @@
    "id": "d46cc633",
    "metadata": {},
    "source": [
-    "The same can be done for fock state probabilities:"
+    "The same can be done for Fock state probabilities:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "94d4a146",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
    "id": "1619ba00",
    "metadata": {},
    "source": [
-    "This tutorial on how the **Qsyst** class works is finished."
+    "This tutorial on how the `Qsyst` class works is finished."
    ]
   },
   {
@@ -320,12 +320,12 @@
     "## Bonus\n",
     "Here is how to plot a 2d cross-section of the wigner function (remember: for $M$ modes it has $2M$ parameters) of the state after an evolution time self.other_pars['t_i].\n",
     "\n",
-    "In order to change the cross section, change the parameters in the **plot_wigner()** function. "
+    "In order to change the cross section, change the parameters in the `plot_wigner()` function. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "65678f85",
    "metadata": {},
    "outputs": [
