--- a/tutorials/qsyst.ipynb
+++ b/tutorials/qsyst.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "e4067873",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "d9e6cb80",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "89ce10ee",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "9c1e32d0",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "2abf2211",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "cf10dc42",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "94d4a146",
    "metadata": {},
    "outputs": [
@@ -318,14 +318,14 @@
    "metadata": {},
    "source": [
     "## Bonus\n",
-    "Here is how to plot a 2d cross-section of the wigner function (remember: for $M$ modes it has $2M$ parameters) of the state after an evolution time self.other_pars['t_i].\n",
+    "Here is how to plot a 2d cross-section of the wigner function (remember: for $M$ modes it has $2M$ parameters) of the state after an evolution time `self.other_pars['t_i]`.\n",
     "\n",
     "In order to change the cross section, change the parameters in the `plot_wigner()` function. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "65678f85",
    "metadata": {},
    "outputs": [
